# coursembed

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  pyproject.toml
alloy/: Dockerfile  config.alloy
minio/createbuckets/: Dockerfile  entrypoint.sh  temp-lifecycle-config.json
nginx/: default.conf
prometheus/: Dockerfile
src/: alembic.ini  app.py  dependencies.py
src/alembic/: script.py.mako
src/alembic/versions/: 5dac43674354_create_block_schema.py
src/controllers/: block_controller.py  migration_controller.py  s3_controller.py  workspace_controller.py
src/models/: block.py  workspace.py
src/repositories/: base.py  block_repository.py  workspace_repository.py
src/services/: base.py  gigachat_api_service.py  migration_service.py  minio_service.py
src/utils/: config.py  psycopg2.py
weaviate/: Dockerfile  entrypoint.sh
